syntax = "proto3";

import "Solidity.proto";
message TestRepeatedTwo {
  string string_field = 1;
  repeated .solidity.uint256 uint256s = 2;
  repeated sint64 sint64s = 3;
  bool bool_field = 4;
}
